Phase 2 : application opérationnelle (sans authentification).

--- a/Habilitations/Habilitations.csproj
+++ b/Habilitations/Habilitations.csproj
@@ -86,6 +86,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="view\FrmHabilitations.resx">
+      <DependentUpon>FrmHabilitations.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="habilitationsDataSet.xsc">
       <DependentUpon>habilitationsDataSet.xsd</DependentUpon>
     </None>
