Phase 7 : qualité de code (SonarQube), transfert chaine de connexion dans App.config.

--- a/Habilitations/App.config
+++ b/Habilitations/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="Habilitations.Properties.Settings.habilitationsConnectionString"
-            connectionString="server=localhost;user id=root;database=habilitations"
+            connectionString="server=localhost;user id=habilitations;password=motdepasseuser;database=habilitations;SslMode=none"
             providerName="MySql.Data.MySqlClient" />
     </connectionStrings>
     <startup> 
